fixed spacing issue for event logs

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -34,6 +34,10 @@ html {
   padding: 20px 0px;
 }
 
+.p-h-20 {
+  padding: 0px 20px;
+}
+
 .p-b-10 {
   padding: 0px 0px 10px 0px;
 }
